# tollgate

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
backend/: .env.example  package.json  tsconfig.json
backend/migrations/: 0001_create_agents.sql  0002_create_budgets.sql  0003_create_listings.sql  0004_create_requests.sql  0005_create_events.sql
backend/src/: db.ts  index.ts  migrate.ts
backend/src/api/: index.ts  router.ts
backend/src/auth/: index.ts
backend/src/facilitator/: index.ts  verify.ts
backend/src/indexer/: index.ts
backend/src/marketplace/: index.ts  marketplace.test.ts
contracts/: Cargo.toml
contracts/budget-policy/: Cargo.toml
contracts/budget-policy/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
docs/: x402-mapping.md
docs/ADRs/: README.md
examples/: package.json
examples/src/: agent-demo.ts
frontend/: .env.example  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/activity/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/: .gitkeep
frontend/lib/: index.ts
infra/: docker-compose.yml
scripts/: deploy-contracts.sh  test-e2e.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  marketplace.rs  wallet.rs  x402.rs
sdk/ts/: package.json
(+22 files in other folders)
