[package]
name = "tollgate-sdk"
version = "0.1.0"
edition = "2021"
description = "Tollgate Rust SDK for native/Rust AI agents"
license = "MIT"
publish = false

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
